Add anchor tag for clearing all completed tasks

--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
       <ul id="task-list"></ul>
 
       <hr />
-      <p>Clear all completed.</p>
+      <a href="#">Clear all completed</a>
     </div>
   </body>
 </html>
