--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
       <ul id="task-list"></ul>
 
       <hr />
-      <a href="#">Clear all completed</a>
+      <a href="#" id="clear-completed">Clear all completed</a>
     </div>
   </body>
 </html>
